tests/spec/compile-fail/138_extern_call_requires_trust.zn
// category: compile-fail
// profile: hosted
// trust.ffi: true
// purpose: trust extern declarations do not make extern calls safe outside trust blocks

module tests.fail.externCallRequiresTrust;

trust extern "C" fn getpid() -> I32;

fn bad() -> I32 {
    return getpid(); // expected-error: extern function call requires trust
}
